<resources>
    <string name="app_name">Type Racer</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_navi">Forgot password</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Login</string>
    <string name="continue_with_facebook">Continue with Facebook</string>

    //facebook login
    <string name="fb_app_id">3864149240277114</string>
    <string name="fb_login_protocol_scheme">fb3864149240277114</string>
    <string name="player_user_name">User name</string>
    <string name="player_user_email">User email</string>
    <string name="player_user_photoUrl">User photoUrl</string>
    <string name="player_user_uid">User uid</string>
    <string name="player_user_emailVerified">user emailVerified</string>
    <string name="textViewDisplayEmail">email:</string>
    <string name="btn_register_me">No account yet? Create one</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="hint_user_name">Name</string>
    <string name="logo_type_racer">logo_type_racer</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="your_confirmation_link_will_be_sent_to_your_email_address">A confirmation link will be sent to your email address</string>
    <string name="text_send">Send</string>
    <string name="log_in_incorrect_msg">Incorrect Email or password. Please try again</string>
    <string name="email_example_john_doe">example: John.doe@gmail.com</string>
    <string name="john_doe">John Doe</string>
    <string name="name">Name</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="password">Password</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="type_here">Type Here</string>
</resources>